tests/build/fail/property/args_count_none.stderr
error: properties must have at least 2 parameters, `UiNode` and one or more values
 --> $DIR/args_count_none.rs:4:15
  |
4 | pub fn no_args() -> impl UiNode {
  |               ^^
